--- a/examples.css
+++ b/examples.css
@@ -26,10 +26,12 @@ form,fieldset,input,textarea,p,blockquote,th,td {
 }
 
 #unicorn{
-	height: 70vh;
+	height: 50vh;
 	position: center center;
+	padding: 10px;
 	border-radius: 20px;
-	opacity: 0.7;
+
+	
 }
 
 .codesnippet{
@@ -77,6 +79,8 @@ ul {
     margin:5px;
     padding:0;
     font-size: 1em;
+    list-style-type:none;
+    
 }
 caption,th {
     text-align: left;
